# parent-illnesses-absences

./: README.md
parent-illness-absences/: Makefile  README.md  pyproject.toml  requirements.txt
parent-illness-absences/notebooks/: 01_explore.ipynb
parent-illness-absences/scripts/: push.py
parent-illness-absences/src/analysis/: did_model.py
parent-illness-absences/src/data/: bls_absences.py  ipums_cps.py
parent-illness-absences/src/features/: parent_flags.py
parent-illness-absences/src/viz/: plots.py
parent-illness-absences/tests/: test_smoke.py
